kubernetes/memos-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: memos-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  rules:
    - host: eks.memos-rowaida.co.uk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: memos-svc
                port:
                  number: 3456
  tls:
    - hosts:
        - eks.memos-rowaida.co.uk
      secretName: memos-tls
